Refactor emote handling; introduce EmoteOptions for better option management and simplify related logic